__Added and modified features: * Changed the functionality of advanced commands to navigate the simulation: "STEP TO" and "TIME TO", both act forwards and backwards in the simulation, basically leading to the desired point both in terms of steps and time. * Insert of Logarithmic Scale in Y axis of charts * Possibility to filter view when clicked Series Name on legend chart(to be reviewed).