@@ -49,7 +49,9 @@ run {
             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.charts=ALL-UNNAMED"
     ]
 mainClassName = 'it.unicam.quasylab.sibilla.gui.InteractiveSimulation'
 
 }
+
